<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ma Reu</string>
    <string name="filter_name">filter</string>
    <string name="booking_activity">Meeting to book</string>
    <string name="chose_date">Click for date</string>
    <string name="chose_hour">Click for hour</string>
    <string name="chose_mail">Participants eMails</string>
    <string name="chose_place">Chose the meeting room</string>
    <string name="book_meeting">Book</string>
    <string name="type_subject">Type the subject</string>
    <string name="chose_duration">In minutes</string>
    <string name="Chose_a_date">Date of meeting :</string>
    <string name="Meeting_start">Meeting start :</string>
    <string name="duration_meeting">Duration :</string>
    <string name="mail_participant">eMails :</string>
    <string name="subject">Subject :</string>
    <string name="chose_the_room">Chose the room :</string>

</resources>